<!--
  Copyright 2011 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<resources>
    <string name="app_name">A.R.E.A</string>
    <string name="alternate_title">Agriculture Research Evidence Application</string>
    <string name="toggle_title">Toggle title</string>
    <string name="toggle_prefs">Show preferences</string>
    <string name="areaService">Area Background Service</string>
    
    <string name="home_text">... an innovative Android tablet application that combines
         the scholarly works found in the IDS publication portal, with related agriculture
          data indicators in the World Bank Open Data API, and current events and news trends,
           powered by Microsoft’s Bing News Search API\n\n Select an Indicator on the following screen to get started ...
    </string>
    
    <string name="delete"	>Delete	</string>
    <string name="save"		>Save	</string>
    <string name="ok"		>OK		</string>
    <string name="add"		>Add	</string>
    <string name="cancel"	>Cancel	</string>
    <string name="yes"		>Yes	</string>
    <string name="no"		>No		</string>
    <string name="empty"	>Empty	</string>
    <string name="title"	>Title	</string>
    <string name="update"	>Update	</string>
    
    <string name="recent_activity">Your Recent Activity</string>
    <string name="reports">Reports</string>
    <string name="articles">Articles</string>
    <string name="recent_reports">Recent Reports</string>
    <string name="recent_articles">Recent Articles</string>
    <string name="recent_charts">Most Recent Chart</string>
    
    <string name="charts">Charts</string>
    <string name="wb_charts">Charts</string>
    <string name="wb_charts_message">Retrieving Chart Data</string>
    <string name="report_list_message">Retrieving Reports</string>
    <string name="article_list_message">Retrieving Articles</string>
	<string name="keyword_label">Country /Region /Income level</string>
	<string name="keyword_hint">Tap to Select Country/Region/Income level</string>
    
	
	<!--  FROM_COUNTRY = { COUNTRY_ID, WB_COUNTRY_ID,
			WB_COUNTRY_CODE, COUNTRY_NAME, CAPITAL_CITY, INCOME_LEVEL_ID,
			INCOME_LEVEL_NAME, COUNTRY_REGION_ID, COUNTRY_REGION_NAME, GDP,
			GNI_CAPITA, POVERTY, LIFE_EX, LITERACY, POPULATION }; -->
	<string name="country_title"	>Country</string>
	<string name="country_name"		>Country</string>
	<string name="country_reports"	>Country Reports</string>
	<string name="country_code"		>Country Code</string>
	<string name="country_capital"	>Capital City</string>
	<string name="country_income"	>Income Level</string>
	<string name="country_region"	>Region</string>
	<string name="country_gdp"		>GDP (current US$)</string>
	<string name="country_gni"		>GNI Per Capita</string>
	<string name="country_poverty"	>Poverty rate</string>
	<string name="country_life_ex"	>Life Expectancy</string>
	<string name="country_literacy"	>Literacy Rate</string>
	<string name="country_pop"		>Population</string>
	
    
    <string name="menu_refresh">Refresh</string>
    <string name="menu_search">Search</string>
    <string name="menu_share">Share</string>
    <string name="menu_save">Save</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete Item</string>
    <string name="menu_prefs">Preferences</string>
    
    <string name="Chart_Desc_Hint">Add a description for this chart</string>
    <string name="Chart_Title_Hint">Add a name to this chart</string>
    <string name="Chart_Title">Chart Name</string>
    <string name="Chart_Desc">Description</string>
    <string name="save_chart">Save</string>
    <string name="chart_retrieve_message">Please wait, Retrieving your Charts</string>
    <string name="no_chart_message">Sorry, You have no Saved Charts. </string>
    <string name="saved_charts">My Saved Charts </string>
    
    <string name="collections">My Collections </string>
    <string name="edit_collection">Edit Collection</string>
    <string name="add_collection">Add Collection</string>
    <string name="view_collection">View Collection</string>
    <string name="delete_collection">Delete Collection</string>
    <string name="menu_collection_save">Save to Collection</string>
    
    <!-- Preferences Strings -->
    <string name="pref_userTitle">User Settings</string>
    <string-array name="prefs_timeEntries">
        <item>15 years</item>
        <item>30 years</item>
    </string-array>
    <string-array name="prefs_timeValues">
        <item>15</item>
        <item>30</item>
    </string-array>
    <string-array name="prefs_resultNumbersEntries">
        <item>10 reports or articles</item>
        <item>15 reports or articles</item>
        <item>20 reports or articles</item>
    </string-array>
    <string-array name="prefs_resultNumbersValues">
        <item>10</item>
        <item>15</item>
        <item>20</item>
    </string-array>
    <string name="pref_apiTitle">API Settings</string>
    <!-- Preference Keys -->
    <string name="pref_idsKey">idsKey</string>
    <string name="pref_bingKey">bingKey</string>
    <string name="pref_resultKey">resultNumber</string>
    
    <string name="prefs_idsKeyTitle">IDS API Key</string>
    <string name="prefs_bingKeyTitle">Bing API Key</string>
    <string name="prefs_idsKey_desc">Enter you IDS API Key</string>
    <string name="prefs_bingKey_desc">Enter your Bing API Key</string>
    <string name="prefs_time">Data Period</string>
    <string name="prefs_timeDesc">Enter the time period you want for data charts</string>
    <string name="prefResultNumberTitle">Search result max</string>
    <string name="prefResultNumber_desc">Maximum number of reports and news articles downloaded per request. (Higher is more data)</string>
    <string name="pref_startupKey">startupActivity</string>
    <string name="pref_startupTitle">Startup Activity</string>
    <string name="prefs_startup_desc">Application initialization indicator</string>
    <string name="search_hint">Search for articles or reports</string>
    <string name="menu_reload">Reload</string>
    <string name="test">Tap to Add Country/Region/Income Level</string>
    
    
    <string name="articles_empty"><![CDATA[No <b>Articles</b> have been downloaded recently.Get started by clicking any of the <b>Indicators</b> or <b>Country Profile</b> data.You can then create <b>Collections</b> to store your favourite items.]]></string>
    <string name="reports_empty"><![CDATA[No <b>Reports</b> have been downloaded recently.Get started by clicking any of the <b>Indicators</b> or <b>Country Profile</b> data.You can then create <b>Collections</b> to store your favourite items.]]></string>
    <string name="charts_empty"><![CDATA[No <b>Charts</b> have been downloaded recently.Get started by clicking any of the <b>Indicators</b>  or <b>Country Profile</b> data.You can then create <b>Collections</b> to store your favourite items.]]></string>
</resources>
