<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item android:id="@+id/menu_search"
        android:title="@string/menu_search"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="0"
        android:showAsAction="always"
        android:actionViewClass="android.widget.SearchView" />
    
    <item android:id="@+id/menu_reload"
        android:title="@string/menu_reload"
        android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="1"
        android:showAsAction="always" />
    
    <item android:id="@+id/menu_save"
        android:title="@string/menu_save"
        android:icon="@drawable/ic_content_save"
        android:orderInCategory="2"
        android:showAsAction="always" />
    
</menu>