<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
        
    <item android:id="@+id/menu_chart_share"
        android:showAsAction="ifRoom"
        android:title="@string/menu_share"
        android:icon="@drawable/ic_action_share"
        android:orderInCategory="0"
        android:actionProviderClass="android.widget.ShareActionProvider" />
    
    <item android:id="@+id/menu_reload"
        android:title="@string/menu_reload"
        android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="1"
        android:showAsAction="always" />
    
    <item android:id="@+id/menu_save"
        android:title="@string/menu_save"
        android:icon="@drawable/ic_content_save"
        android:orderInCategory="2"
        android:showAsAction="always" />
</menu>