<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/gradient_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp" 
            android:layout_weight="1">
              <TextView
        		android:id="@+id/textView1"
        		android:layout_width="wrap_content"
        		android:layout_height="match_parent"
        		android:text="@string/pref_userTitle"
        		android:textColor="#ffffff"
        		android:textSize="60sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <LinearLayout
                android:id="@+id/pref1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical" 
                android:layout_weight="1"
                android:clickable="true">
                <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/prefs_time"
                        android:textSize="40sp" />
                <LinearLayout
                        android:layout_width="wrap_content"
                		android:layout_height="0dp"
                		android:layout_weight="1" >

                        <ImageView
                            android:id="@+id/imageView1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_action_settings" />

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/prefs_timeDesc"
                            android:textSize="20sp" />

                    </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/pref2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:clickable="true" >
                <TextView
                	android:id="@+id/textView7"
                	android:layout_width="wrap_content"
                  	android:layout_height="0dp"
                  	android:layout_weight="1"
                  	android:text="@string/prefResultNumberTitle"
                  	android:textSize="40sp" />
                <LinearLayout
                       	android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1" >

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_action_settings" />

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/prefResultNumber_desc"
                            android:textSize="20sp" />

                    </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
    <View 
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="#ffffff"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp" 
            android:layout_weight="1">
            
    		<TextView
        		android:id="@+id/textView1"
        		android:layout_width="match_parent"
        		android:layout_height="match_parent"
        		android:text="@string/pref_apiTitle"
        		android:textColor="#ffffff"
        		android:textSize="60sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp" 
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/pref3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:clickable="true" >
                <TextView
                 	android:id="@+id/textView4"
                   	android:layout_width="wrap_content"
                  	android:layout_height="0dp"
                   	android:layout_weight="1"
                  	android:text="@string/prefs_idsKeyTitle"
                  	android:textSize="40sp" />
                <LinearLayout
                        android:layout_width="wrap_content"
                		android:layout_height="0dp"
                		android:layout_weight="1" >

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_action_settings" />

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/prefs_idsKey_desc"
                            android:textSize="20sp" />

                    </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/pref4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" 
                android:clickable="true">
                <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/prefs_bingKeyTitle" 
                        android:textSize="40sp"/>
                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1" >

                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_action_settings" />

                        <TextView
                            android:id="@+id/textView10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/prefs_bingKey_desc" 
                            android:textSize="20sp"/>

                    </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
